@@ -917,7 +917,8 @@ The fields added to the event are looking as following:
          "family":"darwin",
          "build":"16G1212",
          "platform":"darwin",
-         "version":"10.12.6"
+         "version":"10.12.6",
+         "name":"Mac OS X"
       },
       "ip": ["192.168.0.1", "10.0.0.1"],
       "mac": ["00:25:96:12:34:56", "72:00:06:ff:79:f1"]
