@@ -34,6 +34,7 @@ func MapHostInfo(info types.HostInfo) common.MapStr {
 				"platform": info.OS.Platform,
 				"version":  info.OS.Version,
 				"family":   info.OS.Family,
+				"name":     info.OS.Name,
 			},
 		},
 	}
@@ -72,6 +73,7 @@ func ReportInfo(_ monitoring.Mode, V monitoring.Visitor) {
 		monitoring.ReportString(V, "platform", info.OS.Platform)
 		monitoring.ReportString(V, "version", info.OS.Version)
 		monitoring.ReportString(V, "family", info.OS.Family)
+		monitoring.ReportString(V, "name", info.OS.Name)
 
 		if info.OS.Codename != "" {
 			monitoring.ReportString(V, "codename", info.OS.Codename)
